live-prop-test-macros/tests/compile_fail/not_fn.stderr
error: #[live_prop_test] can only be applied to a fn item, an impl item, or an argument in the signature of a fn that also has the attribute
 --> $DIR/not_fn.rs:3:1
  |
3 | #[live_prop_test]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
